--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!doctype html>
 <html lang="nl">
 <head>
+  <link rel="manifest" href="manifest.json">
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        // Let op: voor GitHub Pages is "./" meestal juist; pas aan als je in een submap staat.
+        navigator.serviceWorker.register("./sw.js", { scope: "./" });
+      });
+    }
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0b0d10" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <!-- nieuw -->
+  <meta name="apple-mobile-web-app-title" content="TEUN FITNESS" />
+  <meta name="format-detection" content="telephone=no" />
+
   <title>TEUN FITNESS — Tracker</title>
   <style>
     :root{ --bg:#0b0d10; --card:#111418; --muted:#8b95a1; --text:#e8edf2; --brand:#4f8cff; --ok:#3ddc97; --warn:#ffcc66; --ring: rgba(79,140,255,.35); }
@@ -24,7 +37,13 @@
     button:hover{border-color:#2a3240}
     button.primary{background:var(--brand);border-color:var(--brand);color:white}
 
-    .tabs{display:flex;gap:8px;margin:16px 0;position:sticky;top:calc(env(safe-area-inset-top) + 4px);z-index:10;overflow-x:auto;-webkit-overflow-scrolling:touch;padding:6px 4px;background:linear-gradient(180deg, rgba(11,13,16,.85), rgba(11,13,16,.6) 60%, rgba(11,13,16,0));backdrop-filter:saturate(120%) blur(6px)}
+    .tabs{
+      display:flex;gap:8px;margin:16px 0;position:sticky;top:calc(env(safe-area-inset-top) + 4px);
+      z-index:10;overflow-x:auto;-webkit-overflow-scrolling:touch;padding:6px 4px;
+      background:linear-gradient(180deg, rgba(11,13,16,.85), rgba(11,13,16,.6) 60%, rgba(11,13,16,0));
+      backdrop-filter:saturate(120%) blur(6px);
+      -webkit-backdrop-filter:saturate(120%) blur(6px); /* Safari */
+    }
     .tab{padding:10px 14px;border:1px solid #1b2027;border-radius:12px;background:#0f1216;cursor:pointer}
     .tab.active{background:#1a2030;border-color:#2a3240;box-shadow:0 0 0 3px var(--ring) inset}
 
@@ -36,6 +55,9 @@
     .card.warmup{border-color:var(--brand);box-shadow:0 0 0 3px var(--ring)}
     .card.warn{border-color:var(--warn);box-shadow:0 0 0 3px rgba(255,204,102,.25) inset}
     .note{color:var(--muted);font-size:13px}
+
+    /* nieuw: row layout voor chips/labels in kaarten */
+    .row{display:flex;flex-wrap:wrap;gap:10px;align-items:center}
 
     .chip{display:inline-flex;align-items:center;gap:6px;background:#0f1216;border:1px solid #1b2027;border-radius:999px;padding:6px 10px;font-size:12px;color:var(--muted)}
     .chip.big{font-size:14px;padding:10px 14px;background:#1a2030;border-color:#2a3240}
